--- a/data-explorer.html
+++ b/data-explorer.html
@@ -8,7 +8,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 		<meta name="description" content=""/>
-		<title>Country Dashboards | Environment, Social and Governance Data | World Bank</title>
+		<title>Explore | Environment, Social and Governance Data | World Bank</title>
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 		  crossorigin="anonymous">
@@ -536,10 +536,10 @@
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
 					<center>
-				  <h2>Country Dashboards</h2></center>
+				  <h2>Explore ESG Data</h2></center>
 					
-<div class='tableauPlaceholder' style='width: 1150px; height: 527px;'>
-<object class='tableauViz' width='1150' height='527' style='display:none;'><param name='host_url' value='https%3A%2F%2Fdataviz.worldbank.org%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;DECDG' /><param name='name' value='ESG_governance&#47;Governance' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /><param name='filter' value='iframeSizedToWindow=true' /></object>
+<div class='tableauPlaceholder' style='width: 1150px; height: 1027px;'>
+<object class='tableauViz' width='1150' height='1027' style='display:none;'><param name='host_url' value='https%3A%2F%2Fdataviz.worldbank.org%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;DECDG' /><param name='name' value='ESG_explore&#47;Exploration' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /><param name='filter' value='iframeSizedToWindow=true' /></object>
 </div>
 
 
