Lots of content updates and format fixes

--- a/data-explorer.html
+++ b/data-explorer.html
@@ -533,10 +533,9 @@
 				</div>
                 </div>
                 <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <div class="col">
 
-					<center>
-				  <h2>Explore ESG Data</h2></center>
+					<center> <h2>Explore ESG Data</h2></center>
 					
 <div class='tableauPlaceholder' style='width: 1150px; height: 1027px;'>
 <object class='tableauViz' width='1150' height='1027' style='display:none;'><param name='host_url' value='https%3A%2F%2Fdataviz.worldbank.org%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;DECDG' /><param name='name' value='ESG_explore&#47;Exploration' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /><param name='filter' value='iframeSizedToWindow=true' /></object>
@@ -545,17 +544,21 @@
 
       	</div>
 			</div>
-			</div>
-	    <div class="container col-container" style="padding-top: 30px; padding-bottom: 30px;">
+			</div> <!-- end container -->
+
+
+
+	  <div class="container col-container" style="padding-bottom: 30px; display: none">
 				<div class="row">
+                <div class="col-sm">
 					<div class="redesign_title">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<h2>Features</h2>
-						</div>
 					</div>
+                </div>
 				</div>
+
 				<div class="row">
-					<div class="col-md-6 col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-sm-4">
 						<div class="redesign_Projectcard section">
 							<div class="lp__card loop_card_photo_title_text_links">
 								<div class="lp__card_wrapper card_tile">
@@ -577,7 +580,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 col-lg-4 col-sm-6 col-xs-12">
+
+					<div class="col-sm-4">
 						<div class="redesign_Projectcard section">
 							<div class="lp__card loop_card_photo_title_text_links">
 								<div class="lp__card_wrapper card_tile"><img src="./img/card-1.jpg" class="lp__img_responsive" alt="Trash floating in water">
@@ -597,7 +601,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 col-lg-4 col-sm-6 col-xs-12">
+
+					<div class="col-sm-4">
 						<div class="redesign_Projectcard section">
 							<div class="lp__card loop_card_photo_title_text_links">
 								<div class="lp__card_wrapper card_tile"><img src="./img/card-1.jpg" class="lp__img_responsive" alt="Trash floating in water">
@@ -621,6 +626,49 @@
 				</div>
 			</div>
       </div>
+	</div>
+
+	<div class="lp__body_content full-row-gray-components" style="display: none">
+		<div class="container">
+				<div class="lp__card additional_resources_card">
+					<div class="lp__card_wrapper" style="border-top: none;">
+						<div class="lp__card_content">
+							<div class="row">
+								<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+									<div class="redesign_title text-center">
+										<h4>Additional Resources</h4>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 loop_card_title_text_links">
+									<ul class="lp__link_list">
+										<li class="additional_resources_list">
+											<a href="#">Download 1 ...</a>
+										</li>
+										<li class="additional_resources_list">
+											<a href="#">Download 2 ...</a>
+										</li>
+										<li class="additional_resources_list"><a href="#">Download 3 ...</a><a href="#"></a>										</li>
+									</ul>
+								</div>
+								<div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 loop_card_title_text_links center-left-border">
+									<ul class="lp__link_list">
+										<li class="additional_resources_list">
+											<a href="#">Infographic</a>
+										</li>
+										<li class="additional_resources_list">
+											<a href="#">Video</a>
+										</li>
+										<li class="additional_resources_list">
+										<a href="#">Blog</a></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 	</div>
 
 			<footer>
