--- a/why-esg-matters.html
+++ b/why-esg-matters.html
@@ -537,7 +537,85 @@
         <div class="col-sm">
 					<center> <h2>Why ESG Matters </h2></center>
 					
-<p style="text-align: center">This page is under construction</p>
+
+
+
+<p>A growing body of research demonstrating the materiality of ESG criteria
+indicates that investors should manage and assess ESG risks and opportunities
+associated with investments. While corporate disclosure of ESG criteria is
+becoming more mainstream, the World Bank has found ESG data in the fixed income
+space, particularly in sovereign fixed income, is lagging. Demand for better
+country level ESG data from trusted sources was one of the findings of an
+ongoing joint research program between WBG and Japan’s <a href="https://www.gpif.go.jp/en/">Government Pension
+Investment Fund</a> (GPIF).</p>
+
+<p>In order to shift financial flows so that they are better aligned with global
+goals, the World Bank Group (WBG) is working to provide financial markets with
+improved data and analytics that shed light on countries’ sustainability
+performance. Along with new information and tools, the World Bank will also
+develop research on the correlation between countries’ sustainability
+performance and the risk and return profiles of relevant investments.</p>
+
+<p>This work is part of the newly launched <a href="https://www.worldbank.org/en/programs/global-program-on-sustainability">Global Program on Sustainability</a> (GPS),
+which aims to provide governments and investors with information and tools that
+improve their understanding of sustainability criteria, including through
+natural capital accounting. Providing improved ESG data to the financial sector
+is a key component of the <a href="https://www.worldbank.org/en/programs/global-program-on-sustainability/priority-themes">Incentives</a> pillar of GPS, which is led by the
+<a href="https://www.worldbank.org/en/about/unit/fci">Finance, Competitiveness, and Innovation</a> (FCI) Global Practice.</p>
+
+<p>The World Bank’s <a href="esg-framework.html">ESG Data Draft Framework</a> provides information on 17
+key sustainability themes spanning environmental, social, and governance
+categories:</p>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Environment</th>
+      <th>Social</th>
+      <th>Governance</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Emissions &amp; pollution</td>
+      <td>Education &amp; skills</td>
+      <td>Human rights</td>
+    </tr>
+    <tr>
+      <td>Natural capital endowment &amp; management</td>
+      <td>Employment</td>
+      <td>Government effectiveness</td>
+    </tr>
+    <tr>
+      <td>Energy use &amp; security</td>
+      <td>Demography</td>
+      <td>Stability &amp; rule of law</td>
+    </tr>
+    <tr>
+      <td>Environment/climate risk &amp; resilience</td>
+      <td>Poverty &amp; inequality</td>
+      <td>Economic environment</td>
+    </tr>
+    <tr>
+      <td>Food security</td>
+      <td>Health &amp; nutrition</td>
+      <td>Gender</td>
+    </tr>
+    <tr>
+      <td> </td>
+      <td>Access to services</td>
+      <td>Innovation</td>
+    </tr>
+  </tbody>
+</table>
+
+<p>The <a href="esg-framework.html">ESG Data Draft Framework</a> incorporates data relevant to all 17 Sustainable
+Development Goals. The Framework organizes data into themes the World Bank
+believes are crucial for financial sector representatives to consider when
+assessing the contribution of investments or policies to sustainable
+development.</p>
+
+
         </div>
       	</div>
       </div>
@@ -628,34 +706,22 @@
 					<div class="lp__card_wrapper" style="border-top: none;">
 						<div class="lp__card_content">
 							<div class="row">
-								<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+								<div class="col">
 									<div class="redesign_title text-center">
 										<h4>Additional Resources</h4>
 									</div>
 								</div>
 							</div>
 							<div class="row">
-								<div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 loop_card_title_text_links">
-									<ul class="lp__link_list">
-										<li class="additional_resources_list">
-											<a href="#">Download 1 ...</a>
-										</li>
-										<li class="additional_resources_list">
-											<a href="#">Download 2 ...</a>
-										</li>
-										<li class="additional_resources_list"><a href="#">Download 3 ...</a><a href="#"></a>										</li>
+								<div class="col-md-6 loop_card_title_text_links">
+									<ul class="lp__link_list more_resources">
+										<li> <a href="esg-framework.html">ESG Data Draft Framework</a> </li>
+                                        <li> <a href="http://documents.worldbank.org/curated/en/913961524150628959">Incorporating Environmental, Social and Governance Factors Into Fixed Income Investment</a> </li>
 									</ul>
 								</div>
-								<div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 loop_card_title_text_links center-left-border">
-									<ul class="lp__link_list">
-										<li class="additional_resources_list">
-											<a href="#">Infographic</a>
-										</li>
-										<li class="additional_resources_list">
-											<a href="#">Video</a>
-										</li>
-										<li class="additional_resources_list">
-										<a href="#">Blog</a></li>
+								<div class="col-md-6 loop_card_title_text_links center-left-border">
+									<ul class="lp__link_list more_resources">
+										<li> <a href="https://www.worldbank.org/en/programs/global-program-on-sustainability">Global Program on Sustainability</a> </li>
 									</ul>
 								</div>
 							</div>
