--- a/listing.html
+++ b/listing.html
@@ -690,16 +690,20 @@
       	</div> <!-- row.lp__body_content -->
 			</div>
       <div class="col-lg-2 col-md-1 col-sm-12 col-xs-12"></div>
-	    <div class="container col-container" style="padding-bottom: 30px;">
+
+
+
+	  <div class="container col-container" style="padding-bottom: 30px; display: none">
 				<div class="row">
+                <div class="col-sm">
 					<div class="redesign_title">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<h2>Features</h2>
-						</div>
 					</div>
+                </div>
 				</div>
+
 				<div class="row">
-					<div class="col-md-6 col-lg-4 col-sm-6 col-xs-12">
+					<div class="col-sm-4">
 						<div class="redesign_Projectcard section">
 							<div class="lp__card loop_card_photo_title_text_links">
 								<div class="lp__card_wrapper card_tile">
@@ -721,7 +725,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 col-lg-4 col-sm-6 col-xs-12">
+
+					<div class="col-sm-4">
 						<div class="redesign_Projectcard section">
 							<div class="lp__card loop_card_photo_title_text_links">
 								<div class="lp__card_wrapper card_tile"><img src="./img/card-1.jpg" class="lp__img_responsive" alt="Trash floating in water">
@@ -741,7 +746,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 col-lg-4 col-sm-6 col-xs-12">
+
+					<div class="col-sm-4">
 						<div class="redesign_Projectcard section">
 							<div class="lp__card loop_card_photo_title_text_links">
 								<div class="lp__card_wrapper card_tile"><img src="./img/card-1.jpg" class="lp__img_responsive" alt="Trash floating in water">
@@ -767,7 +773,7 @@
       </div>
 	</div>
 
-	<div class="lp__body_content full-row-gray-components">
+	<div class="lp__body_content full-row-gray-components" style="display: none">
 		<div class="container">
 				<div class="lp__card additional_resources_card">
 					<div class="lp__card_wrapper" style="border-top: none;">
@@ -809,7 +815,6 @@
 				</div>
 			</div>
 	</div>
-
 			<footer>
 				<div class="full-row-footer-components">
 					<div class="container">
