Small routine changes

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 <!-- START main banner -->
 <div class="lp__banner_landing v1">
           <div class="lp__banner_fullwidth">
-    <div class="lp__banner_img"> <img src="img/japan1.jpg" class="lp__img_responsive cover_image" alt="Main banner image showing man picking trash"> <span class="img-gradient"></span> </div>
+    <div class="lp__banner_img"> <img src="img/caravan2.jpg" class="lp__img_responsive cover_image" alt="Main banner image showing man picking trash"> <span class="img-gradient"></span> </div>
     <div class="container banner-container">
               <div class="row">
         <div class="lp__banner_img_overlay_v1 col-xl-10 col-lg-10 col-md-12 col-sm-12 col-xs-12">
@@ -986,7 +986,7 @@
   </div> <!-- div.col-container -->
 	<div class="clearfix full-row-white-components lp__body_content container">
           <div class="row">
-    <div class="col-md-12 col-lg-5 col-sm-12 col-xs-12 colsplit">
+    <div class="col-sm-12 col-lg-5 colsplit">
               <h4><!--title starts --> 
         <a href="http://documents.worldbank.org/curated/en/913961524150628959">Featured Report</a> </h4>
               <p>
@@ -999,9 +999,12 @@
                 <!-- <a href="http://documents.worldbank.org/curated/en/913961524150628959" class="lp__btn lp__btn_sm lp__btn_secondary_orange">Key Findings</a> -->
               </div>
             </div>
-    <div class="col-md-12 col-lg-7 col-sm-12 col-xs-12 colsplit"> 
+    <div class="col-sm-12 col-lg-7 colsplit"> 
               
-              <div class="lp__card_img map_img"> <img src="images/banner-2.png" alt="" width="779" height="395" class="lp__img_responsive embed-image" style="width:700px;height:425px;" title=""> </div>
+              <div class="lp__card_img map_img">
+                <!-- <img src="images/japan1.jpg" alt="" width="779" height="395" class="lp__img_responsive embed-image" style="width:700px;height:425px;" title=""> -->
+                <img src="images/japan1.jpg" alt="" class="lp__img_responsive embed-image" title="">
+              </div>
             </div>
   </div>
         </div>
