--- a/why-esg-matters.html
+++ b/why-esg-matters.html
@@ -540,11 +540,12 @@
 
 
 
+
 <p>A growing body of research demonstrating the materiality of ESG criteria
-indicates that investors should manage and assess ESG risks and opportunities
-associated with investments. While corporate disclosure of ESG criteria is
-becoming more mainstream, the World Bank has found ESG data in the fixed income
-space, particularly in sovereign fixed income, is lagging. Demand for better
+indicates that investors need to manage and assess ESG risks and opportunities
+associated with their investments. While corporate disclosure of ESG criteria is
+becoming more mainstream, the World Bank has found ESG data at the sovereign level
+is lagging. Demand for better
 country level ESG data from trusted sources was one of the findings of an
 ongoing joint research program between WBG and Japan’s <a href="https://www.gpif.go.jp/en/">Government Pension
 Investment Fund</a> (GPIF).</p>
@@ -613,7 +614,14 @@ categories:</p>
 Development Goals. The Framework organizes data into themes the World Bank
 believes are crucial for financial sector representatives to consider when
 assessing the contribution of investments or policies to sustainable
-development.</p>
+development. The initial set of indicators has been based on:</p>
+
+<ul>
+  <li>Survey of World Bank data currently used by investors</li>
+  <li>Indicators relevant to World Bank’s own policy analysis</li>
+  <li>Other key indicators identified through analysis of World Bank expert teams</li>
+  <li>Availability, coverage, timeliness of data</li>
+</ul>
 
 
         </div>
