fixes to home page

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 title: Home Page
-url: index.html
 pageCategory: home
 layout: home
+dataviz: yes
 ---
 
 <!-- START main banner -->
@@ -547,17 +547,13 @@ layout: home
         <div class="lp__card_content">
                   <div class="row">
                     <div class="col">
-                      <div class="redesign_title text-center"> <h4>Connect With Us</h4> </div>
+                      <div class="redesign_title text-center"> <h4>Our Staff</h4> </div>
                     </div>
                   </div>
 
                   <div class="row">
                     <div class="col">
                       <p style="text-align: center">This Section Under Construction</p>
-                      <ul class="lp__link_list more_resources">
-                      <li>Twitter integration (need Twitter account)</li>
-                      <li>LinkedIn integration (need LinkedIn account)</li>
-                      <li>Newsletter subscribe (need MailChimp info)</li>
                       </ul>
                     </div>
                   </div>
