--- a/data-framework.html
+++ b/data-framework.html
@@ -1,5 +1,5 @@
 ---
-title: About the ESG Dataset
+title: ESG Data Framework
 ---
 
                   <p>The table below shows the indicators available in the draft ESG dataset:</p>
