--- a/index.html
+++ b/index.html
@@ -357,10 +357,10 @@ dataviz: yes
                 <li>Download data:
                   <a href="http://databank.worldbank.org/data/download/ESG_excel.zip">Excel</a> |
                   <a href="http://databank.worldbank.org/data/download/ESG_csv.zip">CSV</a> |
-                  <a href="#">Data catalog</a></li>
+                  <a href="https://datacatalog.worldbank.org/dataset/environment-social-and-governance-data">Data catalog</a></li>
                 <li><a href="data-explorer.html">Visualize</a></li>
                 <li><a href="https://databank.worldbank.org/source/environment-social-and-governance?preview=on">Databank</a></li>
-                <li><a href="listing.html">Documentation</a></li>
+                <li><a href="data-framework.html">Data Framework</a></li>
                 </ol>
               </div>
                     </div>
@@ -453,10 +453,10 @@ dataviz: yes
             <div class="lp__card_wrapper card_tile"><img src="./images/kids-learning.jpg" class="lp__img_responsive" alt="https://www.flickr.com/photos/worldbank/47690244512/">
               <div class="lp__card_content">
                 <h6 class="lp__card_title"><a href="engage.html">Engage</a></h6>
-                <p class="lp__card_description">Call to action, contact information, partner logos, etc</p>
+                <p class="lp__card_description">This is a dynamic and growing community. Stay connected or provide feedback on the Portal.</p>
                 <div class="lp__card_list_horizontal">
                           <ul class="lp__card_list">
-                    <li class="lp__card_list_item"> <span class="card_link"> <a href="engage.html">Read More</a> </span>
+                    <li class="lp__card_list_item"> <span class="card_link"> <a href="engage.html">Connect With Us</a> </span>
                   </ul>
                         </div>
               </div>
@@ -551,10 +551,21 @@ dataviz: yes
                     </div>
                   </div>
 
-                  <div class="row">
-                    <div class="col">
-                      <p style="text-align: center">This Section Under Construction</p>
-                      </ul>
+                  <div class="row staff-profile">
+                    <div class="col-md-6 col-lg-4">
+                      <img src="images/fiona-stewart.png">
+                      <p class="name">Fiona Stewart</p>
+                      <p class="title">Lead Financial Sector Specialist</p>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                      <img src="images/heike-reichelt.png">
+                      <p class="name">Heike Reichelt</p>
+                      <p class="title">Head of Investor Relations &amp; New Product Development</p>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                      <img src="images/tim-herzog.png">
+                      <p class="name">Timothy Herzog</p>
+                      <p class="title">Senior Data Scientist</p>
                     </div>
                   </div>
         </div>
