--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ dataviz: yes
 
 <div class="container" id="hp-hero-viz"> 
 <div class="row"><div class="col">
-<h6>An ESG Data Overview</h6>
+<h6>A Selection of ESG Indicators</h6>
 
 
 <div class='tableauPlaceholder' style='width: 1200px; height: 727px;'>
@@ -295,50 +295,6 @@ dataviz: yes
           <div class="container col-container" style="padding-bottom: 30px;">
     <div class="row"></div>
     <div class="row">
-              <!-- BEGIN Why ESG Matters card -->
-              <div class="col-md-6 col-lg-4 col-sm-6 col-xs-12">
-        <div class="redesign_Projectcard section">
-                  <div class="lp__card loop_card_photo_title_text_links">
-            <div class="lp__card_wrapper card_tile"> <img src="./img/card-1.jpg" class="lp__img_responsive" alt="Trash floating in water">
-                      <div class="lp__card_content">
-                <h6 class="lp__card_title"><a href="why-esg-matters.html">Why ESG Matters</a></h6>
-                <p class="lp__card_description">
-                If Environment, Social &amp; Governance (ESG) is unfamiliar, this page will get you started with a brief overview.
-                </p>
-                <div class="lp__card_list_horizontal">
-                          <ul class="lp__card_list">
-                    <li class="lp__card_list_item"> <span class="card_link"> <a href="why-esg-matters.html">Read More</a> </span> </li>
-                  </ul>
-                        </div>
-						  
-              </div>
-                    </div>
-          </div>
-                </div>
-      </div> <!-- Why ESG Matters card -->
-
-              <!-- BEGIN Knowledge Base card -->
-              <div class="col-md-6 col-lg-4 col-sm-6 col-xs-12">
-        <div class="redesign_Projectcard section">
-                  <div class="lp__card loop_card_photo_title_text_links">
-            <div class="lp__card_wrapper card_tile"><img src="./images/palm-trees.jpg" class="lp__img_responsive" alt="https://www.flickr.com/photos/worldbank/25501504302/">
-              <div class="lp__card_content">
-                <h6 class="lp__card_title"><a href="knowledge-base.html">Knowledge Base</a></h6>
-                <ul>
-                <li class="lp__card_description">
-                A selection of publications from the World Bank and outside entities on the changing role of ESG in sovereign fixed income investing.
-                </li>
-                </ul>
-                <div class="lp__card_list_horizontal">
-                          <ul class="lp__card_list">
-                    <li class="lp__card_list_item"> <span class="card_link"> <a href="knowledge-base.html">Read More</a> </span>
-                  </ul>
-                        </div>
-              </div>
-                    </div>
-          </div>
-                </div>
-      </div> <!-- Knowledge Base card -->
 
               <!-- BEGIN Data card -->
               <div class="col-md-6 col-lg-4 col-sm-6 col-xs-12">
@@ -348,13 +304,13 @@ dataviz: yes
               <div class="lp__card_content">
                 <h6 class="lp__card_title"><a href="data-explorer.html">Data</a></h6>
                 <ol class="lp__card_description">
+                <li><a href="data-framework.html">Data Framework</a></li>
+                <li><a href="data-explorer.html">Visualize</a></li>
                 <li>Download data:
                   <a href="http://databank.worldbank.org/data/download/ESG_excel.zip">Excel</a> |
                   <a href="http://databank.worldbank.org/data/download/ESG_csv.zip">CSV</a> |
                   <a href="https://datacatalog.worldbank.org/dataset/environment-social-and-governance-data">Data catalog</a></li>
-                <li><a href="data-explorer.html">Visualize</a></li>
                 <li><a href="https://databank.worldbank.org/source/environment-social-and-governance?preview=on">Databank</a></li>
-                <li><a href="data-framework.html">Data Framework</a></li>
                 </ol>
               </div>
                     </div>
@@ -362,13 +318,6 @@ dataviz: yes
                 </div>
       </div> <!-- Data card -->
 
-            </div> <!-- div.row -->
-
-  </div> <!-- div.col-container -->
-
-          <div class="container col-container" style="padding-bottom: 30px;">
-    <div class="row"></div>
-    <div class="row">
               <!-- BEGIN Country Dashboards card -->
               <div class="col-md-6 col-lg-4 col-sm-6 col-xs-12">
         <div class="redesign_Projectcard section">
@@ -409,6 +358,14 @@ dataviz: yes
           </div>
                 </div>
       </div> <!-- At-A-Glance card -->
+
+            </div> <!-- div.row -->
+
+  </div> <!-- div.col-container -->
+
+          <div class="container col-container" style="padding-bottom: 30px;">
+    <div class="row"></div>
+    <div class="row">
 		
         <!-- BEGIN Knowledgebase card (hidden) -->
 		<div class="col-md-6 col-lg-4 col-sm-6 col-xs-12" style="display: none">
@@ -439,6 +396,51 @@ dataviz: yes
           </div>
                 </div>
       </div> <!-- Knowledgebase card (hidden) -->
+
+              <!-- BEGIN Why ESG Matters card -->
+              <div class="col-md-6 col-lg-4 col-sm-6 col-xs-12">
+        <div class="redesign_Projectcard section">
+                  <div class="lp__card loop_card_photo_title_text_links">
+            <div class="lp__card_wrapper card_tile"> <img src="./img/card-1.jpg" class="lp__img_responsive" alt="Trash floating in water">
+                      <div class="lp__card_content">
+                <h6 class="lp__card_title"><a href="why-esg-matters.html">Why ESG Matters</a></h6>
+                <p class="lp__card_description">
+                If Environment, Social &amp; Governance (ESG) is unfamiliar, this page will get you started with a brief overview.
+                </p>
+                <div class="lp__card_list_horizontal">
+                          <ul class="lp__card_list">
+                    <li class="lp__card_list_item"> <span class="card_link"> <a href="why-esg-matters.html">Read More</a> </span> </li>
+                  </ul>
+                        </div>
+						  
+              </div>
+                    </div>
+          </div>
+                </div>
+      </div> <!-- Why ESG Matters card -->
+
+              <!-- BEGIN Research card -->
+              <div class="col-md-6 col-lg-4 col-sm-6 col-xs-12">
+        <div class="redesign_Projectcard section">
+                  <div class="lp__card loop_card_photo_title_text_links">
+            <div class="lp__card_wrapper card_tile"><img src="./images/palm-trees.jpg" class="lp__img_responsive" alt="https://www.flickr.com/photos/worldbank/25501504302/">
+              <div class="lp__card_content">
+                <h6 class="lp__card_title"><a href="research.html">Research</a></h6>
+                <ul>
+                <li class="lp__card_description">
+                A selection of publications from the World Bank and outside entities on the changing role of ESG in sovereign fixed income investing.
+                </li>
+                </ul>
+                <div class="lp__card_list_horizontal">
+                          <ul class="lp__card_list">
+                    <li class="lp__card_list_item"> <span class="card_link"> <a href="research.html">Read More</a> </span>
+                  </ul>
+                        </div>
+              </div>
+                    </div>
+          </div>
+                </div>
+      </div> <!-- Research card -->
 
               <!-- BEGIN Engage card -->
               <div class="col-md-6 col-lg-4 col-sm-6 col-xs-12">
@@ -481,6 +483,7 @@ dataviz: yes
               <div class="lp__card_img map_img">
                 <!-- <img src="images/japan1.jpg" alt="" width="779" height="395" class="lp__img_responsive embed-image" style="width:700px;height:425px;" title=""> -->
                 <img src="images/japan1.jpg" alt="" class="lp__img_responsive embed-image" title="">
+                <p class="photo-caption">Photo credit: Shutterstock / Black Salmon</p>
               </div>
             </div>
   </div>
