Site and CSS optimization

--- a/indicators.html
+++ b/indicators.html
@@ -1,5 +1,5 @@
 ---
-title: ESG Data Framework
+title: List of ESG Indicators
 ---
 
                   <p>The table below shows the indicators available in the draft ESG dataset:</p>
