More content updates

--- a/framework.html
+++ b/framework.html
@@ -1,8 +1,8 @@
 ---
-title: List of ESG Indicators
+title: ESG Data Framework
 ---
 
-                  <p>The table below shows the indicators available in the draft ESG dataset:</p>
+                  <p>The list below shows the indicators included in the ESG dataset:</p>
 
                   <h6>Environment Pillar</h6>
 
