--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ dataviz: yes
               <div class="col">
               <p align="center">This website provides a platform for discovering available data relevant to ESG analysis and decision making. Use the on-site tools
               to explore data visualizations and dashboards, download the dataset, and engage with partners and practioners.</p>
-       <div class="primary-btn lp__text_center">  <a href="why-esg-matters.html" class="lp__btn lp__btn_sm lp__btn_secondary_orange">Read more</a> </div>
+       <div class="primary-btn lp__text_center">  <a href="overview.html" class="lp__btn lp__btn_sm lp__btn_secondary_orange">Read more</a> </div>
         
       </div>
 		<div class="col" style="align-content: center; display: none">
@@ -301,15 +301,12 @@ dataviz: yes
                   <div class="lp__card loop_card_photo_title_text_links">
             <div class="lp__card_wrapper card_tile"><img src="./images/egypt-malpass.jpg" class="lp__img_responsive" alt="https://www.flickr.com/photos/worldbank/40838675993/">
               <div class="lp__card_content">
-                <h6 class="lp__card_title"><a href="data-explorer.html">Data</a></h6>
+                <h6 class="lp__card_title"><a href="framework.html">Data</a></h6>
                 <ol class="lp__card_description">
-                <li><a href="esg-framework.html">Methodology</a></li>
-                <li><a href="indicators.html">List of indicators</a></li>
-                <li><a href="data-explorer.html">Visualize</a></li>
-                <li>Download data:
-                  <a href="http://databank.worldbank.org/data/download/ESG_excel.zip">Excel</a> |
-                  <a href="http://databank.worldbank.org/data/download/ESG_csv.zip">CSV</a> |
-                  <a href="https://datacatalog.worldbank.org/dataset/environment-social-and-governance-data">Data catalog</a></li>
+                <li><a href="methodology.html">Methodology</a></li>
+                <li><a href="framework.html">ESG Data Framework</a></li>
+                <li><a href="https://datacatalog.worldbank.org/dataset/environment-social-and-governance-data">Download data</a>
+                    (CSV, Excel or API)</a>
                 <li><a href="https://databank.worldbank.org/source/environment-social-and-governance?preview=on">Databank</a></li>
                 </ol>
               </div>
@@ -324,15 +321,11 @@ dataviz: yes
                   <div class="lp__card loop_card_photo_title_text_links">
             <div class="lp__card_wrapper card_tile"><img src="./images/bogota-bikes.jpg" class="lp__img_responsive" alt="https://www.flickr.com/photos/worldbank/24229710442">
               <div class="lp__card_content">
-                <h6 class="lp__card_title"><a href="country-dashboards.html">Country Dashboards</a></h6>
-                <p class="lp__card_description">Selection of key ESG indicators provides a high-level view of ESG for all countries.
-                <a class="nobreak" href="country-dashboards.html">Browse dashboards</a>
-                </p>
-                <div class="lp__card_list_horizontal">
-                          <ul class="lp__card_list">
-                    <li class="lp__card_list_item"> <span class="card_link"> <a href="country-dashboards.html">Read More</a> </span> </li>
-                  </ul>
-                        </div>
+                <h6 class="lp__card_title"><a href="explorer.html">Visualize ESG Data</a></h6>
+                <ol class="lp__card_description">
+                <li><a href="dashboards.html">Country dashboards</a>: a selection of ESG indicators at the country level</li>
+                <li><a href="explorer.html">Interactive data explorer</a>: select your own indicators for a country, with regional and global aggregates for reference</li>
+                </ol>
               </div>
                     </div>
           </div>
@@ -340,7 +333,7 @@ dataviz: yes
       </div> <!-- Country Dashboards card -->
 
               <!-- BEGIN At-A-Glance card -->
-              <div class="col-lg-4 col-sm-6 col-xs-12">
+              <div class="col-lg-4 col-sm-6 col-xs-12" style="display: none">
         <div class="redesign_Projectcard section">
                   <div class="lp__card loop_card_photo_title_text_links">
             <div class="lp__card_wrapper card_tile"><img src="./images/canals.jpg" class="lp__img_responsive" alt="https://www.flickr.com/photos/worldbank/32816342097/">
@@ -395,13 +388,13 @@ dataviz: yes
                   <div class="lp__card loop_card_photo_title_text_links">
             <div class="lp__card_wrapper card_tile"> <img src="./img/card-1.jpg" class="lp__img_responsive" alt="Trash floating in water">
                       <div class="lp__card_content">
-                <h6 class="lp__card_title"><a href="why-esg-matters.html">Why ESG Matters</a></h6>
+                <h6 class="lp__card_title"><a href="overview.html">Overview</a></h6>
                 <p class="lp__card_description">
-                If Environment, Social &amp; Governance (ESG) is unfamiliar, this page will get you started with a brief overview.
+                Additional information about the Portal and how the ESG data framework was developed.
                 </p>
                 <div class="lp__card_list_horizontal">
                           <ul class="lp__card_list">
-                    <li class="lp__card_list_item"> <span class="card_link"> <a href="why-esg-matters.html">Read More</a> </span> </li>
+                    <li class="lp__card_list_item"> <span class="card_link"> <a href="overview.html">Read More</a> </span> </li>
                   </ul>
                         </div>
 						  
