--- a/framework.html
+++ b/framework.html
@@ -1,12 +1,21 @@
 ---
 title: ESG Data Framework
+moreinfo:
+  left:
+    - link:  methodology.html
+      title: ESG Data Methodology
+    - link:  http://documents.worldbank.org/curated/en/913961524150628959
+      title: Incorporating Environmental, Social and Governance Factors Into Fixed Income Investment
+  right:
+    - link:  https://www.worldbank.org/en/programs/global-program-on-sustainability
+      title: Global Program on Sustainability
 ---
 
                   <p>The list below shows the indicators included in the ESG dataset:</p>
 
+<div class="indicators-list">
                   <h6>Environment Pillar</h6>
 
-<div class="indicators-list">
 <ul>
 <li>Emissions &amp; pollution
     <ul>
