Implement team and ECR review changes

--- a/framework.html
+++ b/framework.html
@@ -1,9 +1,9 @@
 ---
-title: ESG Data Framework
+title: Sovereign ESG Data Framework
 moreinfo:
   left:
     - link:  methodology.html
-      title: ESG Data Methodology
+      title: Sovereign ESG Data Methodology
     - link:  http://documents.worldbank.org/curated/en/913961524150628959
       title: Incorporating Environmental, Social and Governance Factors Into Fixed Income Investment
   right:
@@ -11,7 +11,7 @@ moreinfo:
       title: Global Program on Sustainability
 ---
 
-                  <p>The list below shows the indicators included in the ESG dataset:</p>
+                  <p>The list below shows the indicators included in the Sovereign ESG dataset:</p>
 
 <div class="indicators-list">
                   <h6>Environment Pillar</h6>
