--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ dataviz: yes
     <div class="container banner-container">
               <div class="row">
         <div class="lp__banner_img_overlay_v1 col-xl-10 col-lg-10 col-md-12 col-xs-12">
-                  <h1 class="lp__banner_title">Environment, Social and Governance Data</h1>
+                  <h1 class="lp__banner_title"><span class="lp__banner_description">Sovereign<br/></span>Environmental, Social, and Governance Data</h1>
                   <p class="lp__banner_description">Data, Tools and Guidance</p>
                 </div>
       </div>
@@ -25,9 +25,9 @@ dataviz: yes
           <div class="container">
     <div class="row">
               <div class="col">
-              <p align="center">This website provides a platform for discovering available data relevant to ESG analysis and decision making. Use the on-site tools
+              <p align="center">This website provides a platform for discovering available data relevant to sovereign ESG analysis and decision making. Use the on-site tools
               to explore data visualizations and dashboards, download the dataset, and engage with partners and practioners.</p>
-       <div class="primary-btn lp__text_center">  <a href="overview.html" class="lp__btn lp__btn_sm lp__btn_secondary_orange">Read more</a> </div>
+       <div class="primary-btn lp__text_center">  <a href="about.html" class="lp__btn lp__btn_sm lp__btn_secondary_orange">Read more</a> </div>
         
       </div>
 		<div class="col" style="align-content: center; display: none">
@@ -304,7 +304,7 @@ dataviz: yes
                 <h6 class="lp__card_title"><a href="framework.html">Data</a></h6>
                 <ol class="lp__card_description">
                 <li><a href="methodology.html">Methodology</a></li>
-                <li><a href="framework.html">ESG Data Framework</a></li>
+                <li><a href="framework.html">Sovereign ESG Data Framework</a></li>
                 <li><a href="https://datacatalog.worldbank.org/dataset/environment-social-and-governance-data">Download data</a>
                     (CSV, Excel or API)</a>
                 <li><a href="https://databank.worldbank.org/source/environment-social-and-governance?preview=on">Databank</a></li>
@@ -383,18 +383,18 @@ dataviz: yes
       </div> <!-- Knowledgebase card (hidden) -->
 
               <!-- BEGIN Why ESG Matters card -->
-              <div class="col-lg-4 col-sm-6 col-xs-12">
+              <div class="col-lg-4 col-sm-6 col-xs-12" style="display: none">
         <div class="redesign_Projectcard section">
                   <div class="lp__card loop_card_photo_title_text_links">
             <div class="lp__card_wrapper card_tile"> <img src="./img/card-1.jpg" class="lp__img_responsive" alt="Trash floating in water">
                       <div class="lp__card_content">
-                <h6 class="lp__card_title"><a href="overview.html">Overview</a></h6>
+                <h6 class="lp__card_title"><a href="about.html">Overview</a></h6>
                 <p class="lp__card_description">
                 Additional information about the Portal and how the ESG data framework was developed.
                 </p>
                 <div class="lp__card_list_horizontal">
                           <ul class="lp__card_list">
-                    <li class="lp__card_list_item"> <span class="card_link"> <a href="overview.html">Read More</a> </span> </li>
+                    <li class="lp__card_list_item"> <span class="card_link"> <a href="about.html">Read More</a> </span> </li>
                   </ul>
                         </div>
 						  
@@ -413,7 +413,7 @@ dataviz: yes
                 <h6 class="lp__card_title"><a href="research.html">Research</a></h6>
                 <ul>
                 <li class="lp__card_description">
-                A selection of publications from the World Bank and outside entities on the changing role of ESG in sovereign fixed income investing.
+                A selection of publications from the World Bank and outside entities on the changing role of ESG in investing.
                 </li>
                 </ul>
                 <div class="lp__card_list_horizontal">
@@ -434,7 +434,7 @@ dataviz: yes
             <div class="lp__card_wrapper card_tile"><img src="./images/kids-learning.jpg" class="lp__img_responsive" alt="https://www.flickr.com/photos/worldbank/47690244512/">
               <div class="lp__card_content">
                 <h6 class="lp__card_title"><a href="engage.html">Engage</a></h6>
-                <p class="lp__card_description">This is a dynamic and growing community. Stay connected or provide feedback on the Portal.</p>
+                <p class="lp__card_description">Become a part of our growing community. Stay connected or provide feedback on the Portal.</p>
                 <div class="lp__card_list_horizontal">
                           <ul class="lp__card_list">
                     <li class="lp__card_list_item"> <span class="card_link"> <a href="engage.html">Connect With Us</a> </span>
@@ -528,17 +528,17 @@ dataviz: yes
 
                   <div class="row staff-profile">
                     <div class="col-xs-12 col-md-6 col-lg-4">
-                      <img src="images/fiona-stewart.png">
+                      <img src="images/fiona-stewart.jpg">
                       <p class="name">Fiona Stewart</p>
                       <p class="title">Lead Financial Sector Specialist</p>
                     </div>
                     <div class="col-xs-12 col-md-6 col-lg-4">
-                      <img src="images/heike-reichelt.png">
+                      <img src="images/heike-reichelt.jpg">
                       <p class="name">Heike Reichelt</p>
                       <p class="title">Head of Investor Relations &amp; New Product Development</p>
                     </div>
                     <div class="col-xs-12 col-md-6 col-lg-4">
-                      <img src="images/tim-herzog.png">
+                      <img src="images/tim-herzog.jpg">
                       <p class="name">Timothy Herzog</p>
                       <p class="title">Senior Data Scientist</p>
                     </div>
