Temporarily disable subscribe/survey links

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ dataviz: yes
                   <div class="lp__card loop_card_photo_title_text_links">
             <div class="lp__card_wrapper card_tile"><img src="./images/bogota-bikes.jpg" class="lp__img_responsive" alt="https://www.flickr.com/photos/worldbank/24229710442">
               <div class="lp__card_content">
-                <h6 class="lp__card_title"><a href="explorer.html">Visualize ESG Data</a></h6>
+                <h6 class="lp__card_title"><a href="dashboards.html">Country Profiles</a></h6>
                 <ol class="lp__card_description">
                 <li><a href="dashboards.html">Country dashboards</a>: a selection of ESG indicators at the country level</li>
                 <li><a href="explorer.html">Interactive data explorer</a>: select your own indicators for a country, with regional and global aggregates for reference</li>
@@ -413,7 +413,7 @@ dataviz: yes
                 <h6 class="lp__card_title"><a href="research.html">Research</a></h6>
                 <ul>
                 <li class="lp__card_description">
-                A selection of publications from the World Bank and outside entities on the changing role of ESG in investing.
+                A selection of publications from the World Bank and outside entities on the changing role of ESG in investing
                 </li>
                 </ul>
                 <div class="lp__card_list_horizontal">
