Content changes and updates for production server

--- a/framework.html
+++ b/framework.html
@@ -16,6 +16,14 @@ moreinfo:
 <div class="indicators-list">
 
 <h6>Environment Pillar</h6>
+<p>This category encompasses key themes, which provide a picture of the
+sustainability of a country’s economic performance given its natural resource
+endowment, management and supplementation and its risk or resilience to climate
+change and other natural hazards. This category pays particular attention to
+the internalization of environmental externalities created by economic
+activity. This category also accounts for sustainable energy access and food
+security, crucial factors for stable long-term economic growth.</p>
+
 <ul>
 <li>Emissions &amp; pollution
     <ul>
@@ -61,6 +69,13 @@ moreinfo:
     </ul>
 </ul>
 <h6>Social Pillar</h6>
+<p>This category encompasses key themes, which provide a picture of the
+sustainability of a country’s economic performance given its efficacy meeting
+the basic needs of its population and reducing poverty, management of social
+and equity issues and investment in human capital and productivity. This
+category also includes demographic criteria, pertinent to stable long-term
+economic growth.</p>
+
 <ul>
 <li>Education &amp; skills
     <ul>
@@ -104,6 +119,12 @@ moreinfo:
     </ul>
 </ul>
 <h6>Governance Pillar</h6>
+<p>This category encompasses key themes, which provide a picture of the
+sustainability of a country’s economic performance given its institutional
+capacity to support long-term stability, growth and poverty reduction. This
+category also accounts for the strength of a country’s political, financial and
+legal systems and capacity to address environmental and social risks.</p>
+
 <ul>
 <li>Human Rights
     <ul>
