--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@ dataviz: yes
   <div class="container lp__card additional_resources_card lp__card_wrapper lp__card_content">
                   <div class="row">
                     <div class="col-xs-12">
-                      <div class="redesign_title text-center"> <h4>Our Staff</h4> </div>
+                      <div class="redesign_title text-center"> <h4>Our Team Includes:</h4> </div>
                     </div>
                   </div>
 
@@ -531,17 +531,32 @@ dataviz: yes
                       <img src="images/fiona-stewart.jpg">
                       <p class="name">Fiona Stewart</p>
                       <p class="title">Lead Financial Sector Specialist</p>
-                    </div>
-                    <div class="col-xs-12 col-md-6 col-lg-4">
-                      <img src="images/heike-reichelt.jpg">
-                      <p class="name">Heike Reichelt</p>
-                      <p class="title">Head of Investor Relations &amp; New Product Development</p>
+                      <p class="department">Finance, Competitiveness, and Innovation Global Practice</p>
                     </div>
                     <div class="col-xs-12 col-md-6 col-lg-4">
                       <img src="images/tim-herzog.jpg">
                       <p class="name">Timothy Herzog</p>
                       <p class="title">Senior Data Scientist</p>
+                      <p class="department">World Bank Development Data Group</p>
                     </div>
+                    <div class="col-xs-12 col-md-6 col-lg-4">
+                      <img src="images/heike-reichelt.jpg">
+                      <p class="name">Heike Reichelt</p>
+                      <p class="title">Head of Investor Relations and New Products </p>
+                      <p class="department">World Bank Treasury</p>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-4">
+                      <img src="images/umar-serajuddin.jpg">
+                      <p class="name">Umar Serajuddin</p>
+                      <p class="title">Manager of Indicators and Data Services</p>
+                      <p class="department">World Bank Development Data Group</p>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                  <div class="col-xs-12">
+                  <p>Contact us at <a href="mailto:esgdata@worldbank.org">esgdata@worldbank.org</a></p>
+                  </div>
                   </div>
   </div>
 
