--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ dataviz: yes
               <div class="row">
         <div class="lp__banner_img_overlay_v1 col-xl-10 col-lg-10 col-md-12 col-xs-12">
                   <h1 class="lp__banner_title"><span class="lp__banner_description">Sovereign<br/></span>Environmental, Social, and Governance Data</h1>
-                  <p class="lp__banner_description">Data, Tools, and Guidance</p>
+                  <p class="lp__banner_description">Data, Tools, and Guidance<br/>(BETA)</p>
                 </div>
       </div>
             </div>
@@ -307,7 +307,7 @@ dataviz: yes
                 <li><a href="framework.html">Sovereign ESG Data Framework</a></li>
                 <li><a href="https://datacatalog.worldbank.org/dataset/environment-social-and-governance-data">Download data</a>
                     (CSV, Excel or API)</a>
-                <li><a href="https://databank.worldbank.org/source/environment-social-and-governance?preview=on">Databank</a></li>
+                <li><a href="https://databank.worldbank.org/source/environment-social-and-governance?preview=on">DataBank</a></li>
                 </ol>
               </div>
                     </div>
@@ -499,6 +499,8 @@ dataviz: yes
                 Finance Ministers for Climate Action</a> (CAPE), the <a href="https://www.banque-france.fr/en/financial-stability/international-role/network-greening-financial-system">Network for
                 Greening the Financial System</a> (NGFS), and the <a href="https://www.ifc.org/wps/wcm/connect/topics_ext_content/ifc_external_corporate_site/sustainability-at-ifc/company-resources/sustainable-finance/sbn">Sustainable
                 Banking Network</a> (SBN). The work of these networks feeds into the work of the ESG data team.</p>
+
+                <p>Contact us at <a href="mailto:esgdata@worldbank.org">esgdata@worldbank.org</a></p>
             </div>
             <!--
             <div class="col-md-6 loop_card_title_text_links">
@@ -519,6 +521,7 @@ dataviz: yes
           </div>
   </div>
 	
+  <!--
   <div class="container lp__card additional_resources_card lp__card_wrapper lp__card_content">
                   <div class="row">
                     <div class="col-xs-12">
@@ -559,6 +562,7 @@ dataviz: yes
                   </div>
                   </div>
   </div>
+-->
 
 </div>
 <!-- END additional resources -->
