--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ dataviz: yes
     <div class="row">
               <div class="col">
               <p align="center">This website provides a platform for discovering available data relevant to sovereign ESG analysis and decision making. Use the on-site tools
-              to explore data visualizations and dashboards, download the dataset, and engage with partners and practioners.</p>
+              to explore data visualizations and dashboards, download the dataset, and engage with partners and practitioners.</p>
        <div class="primary-btn lp__text_center">  <a href="about.html" class="lp__btn lp__btn_sm lp__btn_secondary_orange">Read more</a> </div>
         
       </div>
