--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@ dataviz: yes
         </div>
 <!-- END main banner -->
 
-<div class="clearfix full-row-darker-blue-components lp__body_content">
+<div class="clearfix full-row-darker-blue-components lp__body_content" id="hp_teaser">
           <div class="container">
     <div class="row">
               <div class="col">
               <p align="center">This website provides a platform for discovering available data relevant to sovereign ESG analysis and decision making. Use the on-site tools
               to explore data visualizations and dashboards, download the dataset, and engage with partners and practitioners.</p>
-       <div class="primary-btn lp__text_center">  <a href="about.html" class="lp__btn lp__btn_sm lp__btn_secondary_orange">Read more</a> </div>
+       <div class="primary-btn lp__text_center">
+         <a href="howto.html" class="lp__btn lp__btn_sm lp__btn_secondary_orange">How to Use the Portal</a><a href="framework.html" class="lp__btn lp__btn_sm lp__btn_secondary_orange">Data Framework</a><a href="about.html" class="lp__btn lp__btn_sm lp__btn_secondary_orange">About the Portal</a>
+       </div>
         
       </div>
 		<div class="col" style="align-content: center; display: none">
@@ -332,25 +334,27 @@ dataviz: yes
                 </div>
       </div> <!-- Country Dashboards card -->
 
-              <!-- BEGIN At-A-Glance card -->
-              <div class="col-lg-4 col-sm-6 col-xs-12" style="display: none">
+              <!-- BEGIN World Bank ESG Resources card -->
+              <div class="col-lg-4 col-sm-6 col-xs-12">
         <div class="redesign_Projectcard section">
                   <div class="lp__card loop_card_photo_title_text_links">
             <div class="lp__card_wrapper card_tile"><img src="./images/canals.jpg" class="lp__img_responsive" alt="https://www.flickr.com/photos/worldbank/32816342097/">
               <div class="lp__card_content">
-                <h6 class="lp__card_title"><a href="ata-glance-reports.html">At-A-Glance Reports</a></h6>
-                <p class="lp__card_description">
-                Global & country-specific dynamic one-pagers for easy download (TBC).</p>
+                <h6 class="lp__card_title"><a href="research.html">World Bank ESG Resources</a></h6>
+                <ol class="lp__card_description">
+                <li><a href="https://www.worldbank.org/en/topic/environment/publication/changing-wealth-of-nations">Changing Wealth of Nations</a></li>
+                <li><a href="https://www.worldbank.org/en/publication/human-capital">Human Capital Project</a><li>
+                </ol>
                 <div class="lp__card_list_horizontal">
                           <ul class="lp__card_list">
-                    <li class="lp__card_list_item"> <span class="card_link"> <a href="ata-glance-reports.html">Read More</a> </span> </li>
+                    <li class="lp__card_list_item"> <span class="card_link"> <a href="research.html">Read More</a> </span> </li>
                   </ul>
                         </div>
               </div>
                     </div>
           </div>
                 </div>
-      </div> <!-- At-A-Glance card -->
+      </div> <!-- World Bank ESG Resources card -->
 
         <!-- BEGIN Knowledgebase card (hidden) -->
 		<div class="col-lg-4 col-sm-6 col-xs-12" style="display: none">
@@ -410,15 +414,13 @@ dataviz: yes
                   <div class="lp__card loop_card_photo_title_text_links">
             <div class="lp__card_wrapper card_tile"><img src="./images/palm-trees.jpg" class="lp__img_responsive" alt="https://www.flickr.com/photos/worldbank/25501504302/">
               <div class="lp__card_content">
-                <h6 class="lp__card_title"><a href="research.html">Research</a></h6>
-                <ul>
-                <li class="lp__card_description">
-                A selection of publications from the World Bank and outside entities on the changing role of ESG in investing
-                </li>
-                </ul>
+                <h6 class="lp__card_title"><a href="resources.html">Other Resources</a></h6>
+                <p class="lp__card_description">
+                A selection of relevant publications from outside organizations.
+                </p>
                 <div class="lp__card_list_horizontal">
                           <ul class="lp__card_list">
-                    <li class="lp__card_list_item"> <span class="card_link"> <a href="research.html">Read More</a> </span>
+                    <li class="lp__card_list_item"> <span class="card_link"> <a href="resources.html">Read More</a> </span>
                   </ul>
                         </div>
               </div>
@@ -489,16 +491,36 @@ dataviz: yes
           </div>
           <div class="row">
             <div class="col-xs-12">
-                <p>The ESG Data Project is the result of collaboration between
-                the <a href="https://www.worldbank.org/en/programs/global-program-on-sustainability">Global Program on Sustainability</a> (GPS) and the
-                <a href="http://data.worldbank.org">Development Data Group</a> with support from
+                <p>The ESG Data Project is the result of collaboration between the World Bank's
+                <a href="https://www.worldbank.org/en/about/unit/fci">Finance, Competitiveness and Innovation</a> (FCI) global practice,
+                the <a href="https://treasury.worldbank.org">World Bank Treasury</a>, and
+                the <a href="http://data.worldbank.org">Development Data Group</a>.
+                The project is funded by
+                the <a href="https://www.firstinitiative.org/">Financial Sector Reform and Strengthening Initiative</a> (FIRST) and
+                the <a href="https://www.worldbank.org/en/programs/global-program-on-sustainability">Global Program on Sustainability</a> (GPS).
+                The project also benefits from
                 the <a href="https://www.wavespartnership.org/">Wealth Accounting and Valuation of Ecosystem Services</a>
-                (WAVES) Program and the <a href="https://www.worldbank.org/en/publication/human-capital">Human Capital Project</a>.</p>
+                (WAVES) Program and
+                the <a href="https://www.worldbank.org/en/publication/human-capital">Human Capital Project</a>.</p>
+            </div>
+          </div>
 
-                <p>Contributing team members are contributors to the <a href="https://www.cape4financeministry.org/coalition_of_finance_ministers">Coalition of
-                Finance Ministers for Climate Action</a> (CAPE), the <a href="https://www.banque-france.fr/en/financial-stability/international-role/network-greening-financial-system">Network for
-                Greening the Financial System</a> (NGFS), and the <a href="https://www.ifc.org/wps/wcm/connect/topics_ext_content/ifc_external_corporate_site/sustainability-at-ifc/company-resources/sustainable-finance/sbn">Sustainable
-                Banking Network</a> (SBN). The work of these networks feeds into the work of the ESG data team.</p>
+          <div class="row partner-logos">
+            <div class="col-sm-6 col-xs-12">
+              <a href="https://www.firstinitiative.org"><img src="images/logo-first.png" alt="FIRST logo" class="lp__img_responsive partner-logo"/></a>
+            </div>
+            <div class="col-md-6 col-xs-12">
+              <a href="https://www.worldbank.org/en/programs/global-program-on-sustainability"><img src="images/logo-gps.png" alt="FIRST logo" class="lp__img_responsive"/></a>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xs-12">
+                <p>Contributing team members are contributors to
+                the <a href="https://www.cape4financeministry.org/coalition_of_finance_ministers">Coalition of Finance Ministers for Climate Action</a> (CAPE),
+                the <a href="https://www.banque-france.fr/en/financial-stability/international-role/network-greening-financial-system">Network for Greening the Financial System</a> (NGFS), and
+                the <a href="https://www.ifc.org/wps/wcm/connect/topics_ext_content/ifc_external_corporate_site/sustainability-at-ifc/company-resources/sustainable-finance/sbn">Sustainable Banking Network</a> (SBN).
+                The work of these networks feeds into the work of the ESG data team.</p>
 
                 <p>Contact us at <a href="mailto:esgdata@worldbank.org">esgdata@worldbank.org</a></p>
             </div>
