--- a/framework.html
+++ b/framework.html
@@ -54,11 +54,11 @@ security, crucial factors for stable long-term economic growth.</p>
     </ul></li>
 <li>Environment/climate risk &amp; resilience
     <ul>
-    <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=EN.CLC.CDDY.XD&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Cooling Degree Days</a></li>
+    <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=EN.CLC.CDDY.XD&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Cooling Degree Days (projected change in number of degree Celsius)</a></li>
     <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=EN.CLC.MDAT.ZS&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Droughts, floods, extreme temperatures (% of population, average 1990-2009)</a></li>
-    <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=EN.CLC.HEAT.XD&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Health Index 35</a></li>
-    <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=EN.CLC.PRCP.XD&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Maximum 5-day Rainfall (25-yr RL)</a></li>
-    <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=EN.CLC.SPEI.XD&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Mean Drought Index (SPEI)</a></li>
+    <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=EN.CLC.HEAT.XD&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Health Index 35 (projected change in days)</a></li>
+    <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=EN.CLC.PRCP.XD&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Maximum 5-day Rainfall, 25-year Return Level (projected change in mm)</a></li>
+    <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=EN.CLC.SPEI.XD&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Mean Drought Index (projected change, unitless)</a></li>
     <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=EN.POP.DNST&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Population density (people per sq. km of land area)</a></li>
     </ul></li>
 <li>Food Security
