Fix typos in indicator names

--- a/framework.html
+++ b/framework.html
@@ -15,6 +15,7 @@ moreinfo:
 
 <div class="indicators-list">
 
+
 <h6>Environment Pillar</h6>
 <p>This category encompasses key themes, which provide a picture of the
 sustainability of a country’s economic performance given its natural resource
@@ -56,7 +57,7 @@ security, crucial factors for stable long-term economic growth.</p>
     <ul>
     <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=EN.CLC.CDDY.XD&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Cooling Degree Days (projected change in number of degree Celsius)</a></li>
     <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=EN.CLC.MDAT.ZS&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Droughts, floods, extreme temperatures (% of population, average 1990-2009)</a></li>
-    <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=EN.CLC.HEAT.XD&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Health Index 35 (projected change in days)</a></li>
+    <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=EN.CLC.HEAT.XD&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Heat Index 35 (projected change in days)</a></li>
     <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=EN.CLC.PRCP.XD&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Maximum 5-day Rainfall, 25-year Return Level (projected change in mm)</a></li>
     <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=EN.CLC.SPEI.XD&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Mean Drought Index (projected change, unitless)</a></li>
     <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=EN.POP.DNST&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Population density (people per sq. km of land area)</a></li>
@@ -64,7 +65,7 @@ security, crucial factors for stable long-term economic growth.</p>
 <li>Food Security
     <ul>
     <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=AG.LND.AGRI.ZS&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Agricultural land (% of land area)</a></li>
-    <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=NV.AGR.TOTL.ZS&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Agriculture, value added (% of GDP)</a></li>
+    <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=NV.AGR.TOTL.ZS&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Agriculture, forestry, and fishing, value added (% of GDP)</a></li>
     <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=AG.PRD.FOOD.XD&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Food production index (2004-2006 = 100)</a></li>
     </ul>
 </ul>
@@ -163,6 +164,5 @@ legal systems and capacity to address environmental and social risks.</p>
     <li><a href="http://databank.worldbank.org/data/reports.aspx?source=3711&series=IP.JRN.ARTC.SC&country=EAS,SAS,MEA,SSF,LCN,ECS,NAC">Scientific and technical journal articles</a></li>
     </ul></li>
 </ul>
-
 
 </div>
