--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ dataviz: yes
                 </ol>
                 <div class="lp__card_list_horizontal">
                           <ul class="lp__card_list">
-                    <li class="lp__card_list_item"> <span class="card_link"> <a href="research.html">Read More</a> </span> </li>
+                    <li class="lp__card_list_item"> <span class="card_link"> <a href="research.html">More Resources</a> </span> </li>
                   </ul>
                         </div>
               </div>
